# Rag_Application

./: .env.example  .gitignore  QUICKSTART.md  README.md  STREAMLIT_GUIDE.md  STREAMLIT_MIGRATION.md  app.py  pyproject.toml  requirements.txt
notebook/: document.ipynb
notebook/data/text_files/: python_intro.txt
src/: data_loader.py  embedding.py  search.py  vectorstore.py
